src/main/resources/static/css/style.css
body {
   padding-top: 40px;
   padding-left: 0px;
   padding-right: 0px;
   background: url(../images/background.jpg) no-repeat;
   background-size: cover;

}

#topfixedbar,#bottombar{
	background-color: #6C648B ;
}

#footer{
	background-color: #6C648B ;
	width: 100%;
    bottom: 0;
    position: fixed;
}
#login1 {
  border-radius: 35px;
  height: 350px;
  width: 450px;
  border: 1px;
  margin-left:auto;
  margin-right:auto;
}     
#login3{
   border-radius: 35px;
   height: 350px;
   width: 450px;
   border: 1px #f2e3d2;
   background: #c7a2a2;
   background: -webkit-gradient(linear, left top, left bottom, from(#165178), to(#c7a2a2));
   background: -webkit-linear-gradient(top, #165178, #c7a2a2);
   background: -moz-linear-gradient(top, #165178, #c7a2a2);
   background: -ms-linear-gradient(top, #165178, #c7a2a2);
   background: -o-linear-gradient(top, #165178, #c7a2a2);
   background-image: -ms-linear-gradient(top, #165178 0%, #c7a2a2 100%);
   -webkit-box-shadow: rgba(000,000,000,0.9) 0 1px 2px, inset rgba(255,255,255,0.4) 0 0px 0;
   -moz-box-shadow: rgba(000,000,000,0.9) 0 1px 2px, inset rgba(255,255,255,0.4) 0 0px 0;
   box-shadow: rgba(000,000,000,0.9) 0 1px 2px, inset rgba(255,255,255,0.4) 0 0px 0;
}
#registerLink a, #forgotPassLink a{
	color: blue;
}

#shippingAddress{
	border-radius: 75px;
	color: white;
	background:#006dcc;
	height: 210px;
	line-height: 30px;
    width: 250px;
    text-align: center;
	vertical-align: middle;
}

#userReg1{
  border-radius: 35px;
  width: 800px;
  border: none;
  margin-left:auto;
  margin-right:auto;
} 

#userReg3{
   border-radius: 35px;
   width: 800px;
   border: none;
   border: 1px #f2e3d2;
   background: #c7a2a2;
   background: -webkit-gradient(linear, left top, left bottom, from(#165178), to(#c7a2a2));
   background: -webkit-linear-gradient(top, #165178, #c7a2a2);
   background: -moz-linear-gradient(top, #165178, #c7a2a2);
   background: -ms-linear-gradient(top, #165178, #c7a2a2);
   background: -o-linear-gradient(top, #165178, #c7a2a2);
   background-image: -ms-linear-gradient(top, #165178 0%, #c7a2a2 100%);
   -webkit-box-shadow: rgba(000,000,000,0.9) 0 1px 2px, inset rgba(255,255,255,0.4) 0 0px 0;
   -moz-box-shadow: rgba(000,000,000,0.9) 0 1px 2px, inset rgba(255,255,255,0.4) 0 0px 0;
   box-shadow: rgba(000,000,000,0.9) 0 1px 2px, inset rgba(255,255,255,0.4) 0 0px 0;
} 

#prodReg-panel{
  border-radius: 35px;
  width: 800px;
  height:850px;
  border: none;
  margin-left:auto;
  margin-right:auto;
} 

#prodReg-body{
   border-radius: 35px;
   width: 800px;
   height:850px;
   border: none;
   border: 1px #f2e3d2;
   background: #c7a2a2;
   background: -webkit-gradient(linear, left top, left bottom, from(#165178), to(#c7a2a2));
   background: -webkit-linear-gradient(top, #165178, #c7a2a2);
   background: -moz-linear-gradient(top, #165178, #c7a2a2);
   background: -ms-linear-gradient(top, #165178, #c7a2a2);
   background: -o-linear-gradient(top, #165178, #c7a2a2);
   background-image: -ms-linear-gradient(top, #165178 0%, #c7a2a2 100%);
   -webkit-box-shadow: rgba(000,000,000,0.9) 0 1px 2px, inset rgba(255,255,255,0.4) 0 0px 0;
   -moz-box-shadow: rgba(000,000,000,0.9) 0 1px 2px, inset rgba(255,255,255,0.4) 0 0px 0;
   box-shadow: rgba(000,000,000,0.9) 0 1px 2px, inset rgba(255,255,255,0.4) 0 0px 0;
} 
input[type=text]{
  border-radius:15px;
  width: 220px;
}
input[type=password]{
  border-radius:15px;
  width: 220px;
}
#paymentModeId, #countryId, #sexId{
  border-radius:15px;
  width: 220px;
}
input[type=email]{
  border-radius:15px;
  width: 220px;
}
input[type=tel]{
  border-radius:15px;
  width: 220px;
}
#navbarcontainer{
   padding-left: 0px; 
   padding-right: 0px;
} 
button[type=submit]{
   border-radius: 15px;
}
.navbar .navbar-inner {
    padding: 0;
}
.navbar .nav {
    margin: 0;
    display: table;
}
.panel{
   border: 2px blue;
}
.panel {
	color: silver; 
	background-color: #1F1C22; 
}

.navbar-text >p{
	color: white;
} 

thead {
	background: light-blue; 
	color: black;
}
table, th, td 
{
    border: 0px solid white;
}

.table-striped>tbody>tr:nth-child(odd)>td, 
.table-striped>tbody>tr:nth-child(odd)>th {
   background-color: #C0C0C0;
   color: black;
 }
.table-striped>tbody>tr:nth-child(even)>td, 
.table-striped>tbody>tr:nth-child(even)>th {
   background-color: white;
   color: black;
 }

.table>tbody>tr>td>a {
  color: blue;
  text-decoration: underline;
}

/* unvisited link */
a:link {
    color: white;
}

/* visited link */
a:visited {
    color: white;
}

/* https:miketricking.github.io dist*/
.hovereffect {
width:100%;
height:100%;
float:left;
overflow:hidden;
position:relative;
text-align:center;
cursor:default;
}

.hovereffect .overlay {
width:100%;
height:100%;
position:absolute;
overflow:hidden;
top:0;
left:0;
opacity:0;
background-color:rgba(0,0,0,0.5);
-webkit-transition:all .4s ease-in-out;
transition:all .4s ease-in-out
}

.hovereffect img {
display:block;
position:relative;
-webkit-transition:all .4s linear;
transition:all .4s linear;
}

.hovereffect h2 {
text-transform:uppercase;
color:#fff;
text-align:center;
position:relative;
font-size:17px;
background:rgba(0,0,0,0.6);
-webkit-transform:translatey(-100px);
-ms-transform:translatey(-100px);
transform:translatey(-100px);
-webkit-transition:all .2s ease-in-out;
transition:all .2s ease-in-out;
padding:10px;
}

.hovereffect button.info {
text-decoration:none;
display:inline-block;
text-transform:uppercase;
color:#fff;
border:1px solid #fff;
background-color:transparent;
opacity:0;
filter:alpha(opacity=0);
-webkit-transition:all .2s ease-in-out;
transition:all .2s ease-in-out;
margin:50px 0 0;
padding:7px 14px;
}

.hovereffect button.info:hover {
box-shadow:0 0 5px #fff;
}

.hovereffect:hover img {
-ms-transform:scale(1.2);
-webkit-transform:scale(1.2);
transform:scale(1.2);
}

.hovereffect:hover .overlay {
opacity:1;
filter:alpha(opacity=100);
}

.hovereffect:hover h2,.hovereffect:hover button.info {
opacity:1;
filter:alpha(opacity=100);
-ms-transform:translatey(0);
-webkit-transform:translatey(0);
transform:translatey(0);
}

.hovereffect:hover button.info {
-webkit-transition-delay:.2s;
transition-delay:.2s;
}

.submit-button {
   border: 0px solid #447314;
   background: #6aa436;
   background: -webkit-gradient(linear, left top, left bottom, from(#52c764), to(#6aa436));
   background: -webkit-linear-gradient(top, #52c764, #6aa436);
   background: -moz-linear-gradient(top, #52c764, #6aa436);
   background: -ms-linear-gradient(top, #52c764, #6aa436);
   background: -o-linear-gradient(top, #52c764, #6aa436);
   background-image: -ms-linear-gradient(top, #52c764 0%, #6aa436 100%);
   -webkit-border-radius: 13px;
   -moz-border-radius: 13px;
   border-radius: 13px;
   -webkit-box-shadow: rgba(255,255,255,0.4) 0 0px 0, inset rgba(255,255,255,0.4) 0 0px 0;
   -moz-box-shadow: rgba(255,255,255,0.4) 0 0px 0, inset rgba(255,255,255,0.4) 0 0px 0;
   box-shadow: rgba(255,255,255,0.4) 0 0px 0, inset rgba(255,255,255,0.4) 0 0px 0;
   text-shadow: #96bd6f 0 1px 0;
   color: #d4d1ae;
   font-family: helvetica, serif;
   padding: 8.5px 18px;
   font-size: 14px;
   text-decoration: none;
   vertical-align: middle;
   }
.submit-button:hover {
   border: 0px solid #447314;
   text-shadow: #31540c 0 1px 0;
   background: #b38719;
   background: -webkit-gradient(linear, left top, left bottom, from(#bf5a5a), to(#b38719));
   background: -webkit-linear-gradient(top, #bf5a5a, #b38719);
   background: -moz-linear-gradient(top, #bf5a5a, #b38719);
   background: -ms-linear-gradient(top, #bf5a5a, #b38719);
   background: -o-linear-gradient(top, #bf5a5a, #b38719);
   background-image: -ms-linear-gradient(top, #bf5a5a 0%, #b38719 100%);
   color: #fff;
   }
.submit-button:active {
   text-shadow: #31540c 0 1px 0;
   border: 0px solid #447314;
   background: #185c61;
   background: -webkit-gradient(linear, left top, left bottom, from(#4c5dc9), to(#b38719));
   background: -webkit-linear-gradient(top, #4c5dc9, #185c61);
   background: -moz-linear-gradient(top, #4c5dc9, #185c61);
   background: -ms-linear-gradient(top, #4c5dc9, #185c61);
   background: -o-linear-gradient(top, #4c5dc9, #185c61);
   background-image: -ms-linear-gradient(top, #4c5dc9 0%, #185c61 100%);
   color: #fff;
   }
   
   .form-field {
   border: 1px solid #311f57;
   background: #090c14;
   -webkit-border-radius: 11px;
   -moz-border-radius: 11px;
   border-radius: 11px;
   color: #d1c1ae;
   -webkit-box-shadow: rgba(255,255,255,0.4) 0 1px 0, inset rgba(000,000,000,0.7) 0 0px 0px;
   -moz-box-shadow: rgba(255,255,255,0.4) 0 1px 0, inset rgba(000,000,000,0.7) 0 0px 0px;
   box-shadow: rgba(255,255,255,0.4) 0 1px 0, inset rgba(000,000,000,0.7) 0 0px 0px;
   }
.form-field:focus {
   background: #225f73;
   color: #ebd7d3;
   }
.form-title {
   color: #fff;
   text-shadow: #000000 0 2px 0;
   text-align:center;
   }
.form-label {
   color: #fff;
   text-shadow: #000000 0 1px 0;
   }

